Fixed content alignment issue

--- a/Web/App_Themes/Skin_3/app.css
+++ b/Web/App_Themes/Skin_3/app.css
@@ -5393,8 +5393,12 @@ a:hover.mb-login-btn {
   }
 }
 /******************* Side Bar ***********************/
+.pre-login-pannel {
+  margin-bottom: 30px;
+}
 @media screen and (min-width: 800px) {
-  .pre-login-panel {
+  .pre-login-pannel {
+    margin-bottom: 0;
     float: right;
   }
 }
